feat(simulation report): added simulation report feature